--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,7 +42,7 @@
                     Recipes has made my life a whole lot easier!" -A millenial </p>
                 <p> "Our secret recipe book got destroyed in a fire and we have been trying to store our memory of
                     the recipes somewhere safe and now we finally have a space to do that!" -Not a millenial</p>
-                <p>"I am sick and tired of my kids calling me to ask about Grandma Simpson's famous lasgna that I love
+                <p>"I am sick and tired of my kids calling me to ask about Grandma Simpson's famous lasgna! I love
                     that we can all access the profile and use the recipes whenever."" -A sick and tired Mother.</p>
             </div>
         </div>
