--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,8 @@
     <title>Secret Family Recipes!</title>
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600|Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -14,14 +16,14 @@
             <div class=navbar>
                 <nav>
                     <a href="#">Home</a>
-                    <a href="#">About Us</a>
+                    <a href="about.html">About Us</a>
                     <a href="#">Contact</a>
                     <a href="#">Log In</a>
                 </nav>
             </div>
         </header>
         <div class="header-img">
-            <h1>Secret Family Recipes</h1>
+            <h1 class=secret>Secret Family Recipes</h1>
             <img class="mainimage" src="../img/fam.jpg" alt="Family Cooking!">
         </div>
         <div class="welcome">
