--- a/HTML/about.html
+++ b/HTML/about.html
@@ -29,7 +29,8 @@
             <h2>How This All Started!</h2>
             <p class="meetp"> What first started as a traditional friends-giving turned into a group of six old time
                 friends brainstorming app and website ideas. Being surrounded by foods that evolved from generational
-                recipes it clicked. A place to store these secret family recipes! <br><span> Meet our team! </span>
+                recipes it clicked. A place to store these secret family recipes! <br><span class="slide"> Meet our
+                    team! </span>
         </div>
         <div class="people">
             <img class="person" src="../img/programlead.png" alt="Picture of Chris Dalao">
