--- a/HTML/index.html
+++ b/HTML/index.html
@@ -36,6 +36,11 @@
             </p>
             <button>Get Started</button>
         </div>
+        <div class="secretcard">
+            <h5> Grandma would want you to pass this recipe down to future generations, but within a few years you will
+                no longer be able to read it. Use Secret Family Recipes to protect your family Dutch Apple Cake!</h5>
+            <img class="cardimage" src="../img/oldcard.png" alt="Secret Family Card">
+        </div>
         <div class="reviews">
             <h2>Reviews From Real People!</h2>
             <div class=reviewp>
