--- a/HTML/about.html
+++ b/HTML/about.html
@@ -40,11 +40,11 @@
             <img class='person' src="../img/react2.png" alt='Picture of Tyler Biswell'>
             <h3>Tyler Biswell <br> Web React II</h3>
             <img class='person' src="../img/back-end.png" alt='Picture of Kevin Lopez'>
-            <h3>Kevin Lopez <br> Web Backend </h3>
+            <h3 id='right'>Kevin Lopez <br> Web Backend </h3>
             <img class='person' src="../img/backend.png" alt='Picture of Desiree Morris'>
-            <h3>Desiree Morris<br> Web Backend </h3>
+            <h3 id='right'>Desiree Morris<br> Web Backend </h3>
             <img class='person' src="../img/UI.png" alt='Picture of Jasmine Kasheboon Khoury'>
-            <h3>Jasmine Khoury<br> Web UI Developer </h3>
+            <h3 id='right'>Jasmine Khoury<br> Web UI Developer </h3>
         </div>
         <section class="contact">
             <h4>Contact</h4>
