--- a/HTML/about.html
+++ b/HTML/about.html
@@ -14,7 +14,7 @@
         <header>
             <div class=navbar>
                 <nav>
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="#">Contact</a>
                     <a href="#">Log In</a>
