--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Secret Family Recipes!</title>
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600|Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -16,7 +16,7 @@
             <div class=navbar>
                 <nav>
                     <a href="#">Home</a>
-                    <a href="about.html">About Us</a>
+                    <a href="HTML/about.html">About Us</a>
                     <a href="#">Contact</a>
                     <a href="#">Log In</a>
                 </nav>
@@ -24,7 +24,7 @@
         </header>
         <div class="header-img">
             <h1 class=secret>Secret Family Recipes</h1>
-            <img class="mainimage" src="../img/fam.jpg" alt="Family Cooking!">
+            <img class="mainimage" src="/img/fam.jpg" alt="Family Cooking!">
         </div>
         <div class="welcome">
             <h2>Welcome!</h2>
@@ -39,7 +39,7 @@
         <div class="secretcard">
             <h5> Grandma would want you to pass this recipe down to future generations, but within a few years you will
                 no longer be able to read it. Use Secret Family Recipes to protect your family Dutch Apple Cake!</h5>
-            <img class="cardimage" src="../img/oldcard.png" alt="Secret Family Card">
+            <img class="cardimage" src="/img/oldcard.png" alt="Secret Family Card">
         </div>
         <div class="reviews">
             <h2>Reviews From Real People!</h2>
